# brb-message-adversary

./: Cargo.toml  README.md  launch_processus.sh  steps.md
ressources/: config_file.txt  processus.txt
ressources/key_pairs/private_keys/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+215 more)
ressources/key_pairs/public_keys/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+215 more)
ressources/tmp/messages/: 1_delivered_messages.txt  3_delivered_messages.txt  4_delivered_messages.txt
ressources/tmp/saved_signatures/: 0_saved_signatures.csv  1_saved_signatures.csv  2_saved_signatures.csv  3_saved_signatures.csv  4_saved_signatures.csv
src/: main.rs  main_backend.rs
src/crypto/: iface_crypto.rs  impl_ecdsa.rs  key_generator.rs  mod.rs
src/mbrb/: mbrb_algorithm.rs  mod.rs
src/mbrb/structs/: bundle.rs  element_to_sign.rs  mbrb.rs  mod.rs
src/net/: impl_udp.rs  interface_network.rs  message_adversary.rs  mod.rs
src/user/: mod.rs  user_interface.rs
